assets: Make attribute deletion work.

--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetDetailsElement.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetDetailsElement.uxml
@@ -5,6 +5,6 @@
 		<ui:Label name="attributes-title" text="Attributes" />
 		<ui:VisualElement name="attributes">
 		</ui:VisualElement>
-		<ui:Button name="add" text="Add New"/>
+		<ui:Button name="add" text="New Attribute"/>
 	</ui:VisualElement>
 </ui:UXML>
