--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/LibraryAttributeElement.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/LibraryAttributeElement.uxml
@@ -1,12 +1,11 @@
 ﻿<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements">
 	<ui:VisualElement name="display" class="library-attribute-element">
-		<ui:Label name="attribute-name"/>
-		<ui:VisualElement name="attribute-values">
-		</ui:VisualElement>
+		<ui:Label name="attribute-name" />
+		<ui:VisualElement name="attribute-values" />
 	</ui:VisualElement>
 	<ui:VisualElement name="edit" class="library-attribute-edit-element hidden">
 		<VisualPinball.Unity.Editor.SearchSuggest name="attribute-name-edit" />
-		<VisualPinball.Unity.Editor.SearchSuggest name="attribute-value-edit"/>
+		<VisualPinball.Unity.Editor.SearchSuggest name="attribute-value-edit" />
 		<ui:Button name="cancelButton" text="✕" />
 		<ui:Button name="okButton" text="✔" />
 	</ui:VisualElement>
