assets: Properly wrap attribute values.

--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/LibraryAttributeElement.uss
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/LibraryAttributeElement.uss
@@ -5,6 +5,7 @@
 	flex-grow: 1;
 	flex-direction: row;
 	justify-content: flex-end;
+	flex-wrap: wrap;
 }
 
 .library-attribute-element #attribute-values > Label:hover {
