assets: Start handling handling read-only and show errors while dragging.

--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetBrowserX.uss
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetBrowserX.uss
@@ -48,6 +48,16 @@ AssetDetailsElement > TemplateContainer {
 	margin: 10px 10px 5px 10px;
 }
 
+#dragErrorContainer {
+	background-color: darkred;
+	padding: 2px 0 0 5px;
+	flex-wrap: wrap;
+}
+
+#dragErrorContainer Label {
+	white-space: normal;
+}
+
 /* thumb item */
 /* ---------- */
 .thumb-item {
