assets: Refuse new categories on locked libraries.

--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetBrowserX.uss
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetBrowserX.uss
@@ -24,9 +24,13 @@
 	-unity-text-align: middle-center;
 }
 
-
 AssetDetailsElement > TemplateContainer {
 	flex-grow: 1;
+}
+
+#libraryList .library-item Image {
+	width: 16px;
+	height: 16px;
 }
 
 /* "grid" */
