--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetDetailsElement.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetDetailsElement.uxml
@@ -9,10 +9,10 @@
             <ui:Label name="date-value" />
         </ui:VisualElement>
         <ui:IMGUIContainer />
-        <ui:Label text="Description" class="subtitle" />
+        <ui:Label name="description-title" text="Description" class="subtitle" />
         <ui:Label name="description-view" multiline="true" />
         <ui:TextField name="description-edit" multiline="true" />
-        <ui:Label text="Attributes" class="subtitle" />
+        <ui:Label name="attributes-title" text="Attributes" class="subtitle" />
         <ui:VisualElement name="attributes" />
         <ui:Button name="add" text="New Attribute" />
     </ui:VisualElement>
