assets: Update info data.

--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetDetailsElement.uss
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetDetailsElement.uss
@@ -29,6 +29,10 @@
 	margin-right: 2px;
 }
 
+#details > #description-view, #details > #info-view {
+	white-space: normal;
+}
+
 #details > #add {
 	margin-top: 8px;
 }
