assets: Show tag filter in details.

--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/TagElement.uss
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/TagElement.uss
@@ -25,6 +25,17 @@
 	background-color: #515151;
 }
 
+#display Label {
+	padding: 1px 3px 1px 3px;
+	border-radius: 3px;
+}
+
+#display.active Label {
+	padding: 0 2px 0 2px;
+	border-color: #7e7e7e;
+	border-width: 1px;
+}
+
 #search-suggest-list {
 	background-color: #5bc0de;
 }
