assets: Make attribute editing functional.

--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetDetailsElement.uss
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetDetailsElement.uss
@@ -9,6 +9,10 @@
 	-unity-font-style: bold;
 }
 
+#details > #add {
+	margin-top: 8px;
+}
+
 #details > #attributes-title {
 	-unity-font-style: bold;
 }
