--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetInspector.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetInspector.uxml
@@ -1,27 +1,18 @@
-<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xmlns:uivpe="VisualPinball.Unity.Editor" editor-extension-mode="True">
-
-	<ui:Label name="title" />
-
-	<!-- Library Header -->
-	<ui:VisualElement name="header1">
-		<ui:Image name="library-icon"/>
-		<ui:Label name="library-name"/>
-		<ui:Image name="library-lock"/>
-	</ui:VisualElement>
-
-	<!-- Category / Date Header -->
-	<ui:VisualElement name="header2">
-		<ui:Image name="category-icon"/>
-		<ui:Label name="category-name"/>
-		<ui:Image name="date-icon"/>
-		<ui:Label name="date-value"/>
-	</ui:VisualElement>
-
-	<!-- Interactive Preview -->
-	<uivpe:PreviewEditorElement name="preview"/>
-
-	<!-- Description -->
-	<ui:TextField binding-path="Description" label="Description" multiline="true" />
-
-
+<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" uivpe="VisualPinball.Unity.Editor" editor-extension-mode="True">
+    <ui:Label name="title" />
+    <ui:VisualElement name="header1">
+        <ui:Image name="library-icon" />
+        <ui:Label name="library-name" />
+        <ui:Image name="library-lock" />
+    </ui:VisualElement>
+    <ui:VisualElement name="header2">
+        <ui:Image name="category-icon" />
+        <ui:Label name="category-name" />
+        <ui:Image name="date-icon" />
+        <ui:Label name="date-value" />
+    </ui:VisualElement>
+    <VisualPinball.Unity.Editor.PreviewEditorElement name="preview" />
+    <ui:TextField binding-path="Description" label="Description" multiline="true" />
+    <uie:PropertyField binding-path="Attributes" label="Attributes" />
+    <ui:TextField picking-mode="Ignore" label="Text Field" value="filler text" text="filler text" />
 </ui:UXML>
