--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetInspector.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetInspector.uxml
@@ -21,15 +21,18 @@
 	<uivpe:PreviewEditorElement name="preview"/>
 
 	<!-- Description -->
-	<ui:TextField binding-path="Description" label="Description" multiline="true" />
+	<ui:TextField binding-path="Description" label="Description" multiline="true" class="top-space" />
 
 	<!-- Attributes -->
 	<uie:PropertyField binding-path="Attributes" label="Attributes" />
 
 	<!-- Attributes -->
-	<uie:PropertyField binding-path="Tags" label="Tags" />
+	<uie:PropertyField binding-path="Tags" label="Tags" class="top-space" />
 
 	<!-- Tags -->
-	<uie:PropertyField binding-path="Links" label="Links" />
+	<uie:PropertyField binding-path="Links" label="Links" class="top-space" />
+
+	<!-- Material Overrides -->
+	<uie:PropertyField binding-path="MaterialVariations" label="Material Variations" class="top-space" />
 
 </ui:UXML>
