--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetMaterialVariationPropertyDrawer.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetMaterialVariationPropertyDrawer.uxml
@@ -1,7 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xmlns:uivpe="VisualPinball.Unity.Editor" editor-extension-mode="True">
-    <ui:TextField picking-mode="Ignore" label="Variation Name" value="filler text" text="filler text" binding-path="Name" />
-<!--    <uie:ObjectField label="Apply to (dropdown)" binding-path="Object" />-->
-    <uivpe:ObjectDropdownElement label="Apply to" binding-path="Object" />
-    <uie:IntegerField label="Slot (dropdown)" value="42" binding-path="Slot" />
+    <ui:TextField picking-mode="Ignore" label="Object Name" value="filler text" text="filler text" binding-path="Name" />
+    <uivpe:ObjectDropdownElement name="object-field" label="Apply to" binding-path="Object" tooltip="The game object to which the material will be applied" />
+    <uivpe:MaterialSlotDropdownElement name="slot-field" label="Slot" binding-path="Slot" tooltip="The material slot on which the material will be applied."/>
     <uie:PropertyField binding-path="Overrides" label="Overrides" />
 </ui:UXML>
